Fix inline octicon vertical alignment

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -1133,8 +1133,6 @@ footer {
 
     .svg {
       margin-right: .15em;
-      vertical-align: top;
-      margin-top: calc(2em - 16px);
     }
   }
 
